# Kepler-Hurrwitz

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  EABC_MASTER_INDEX.md  EVIDENCE_REGISTER.json  EVIDENCE_REGISTER.md  KeplerHurwitz.lean  README.md  lake-manifest.json  lakefile.toml  pyproject.toml
KeplerHurwitz/: AnisotropicBinaryVolumeContraction.lean  BambergGaugeCovariance.lean  BambergInternalCoupling.lean  BambergQuadrupletAdmissibility.lean  Basic.lean  BlackHoleInterface.lean  ChebyshevBiasInterface.lean  CollatzChannelSeven.lean  CollatzNetDescentDiagnostics.lean  CollatzNetDescentMod8.lean  CollatzNormShell.lean  CollatzProofAttemptV2.lean  CollatzProofAttemptV21.lean  CollatzProofAttemptV210.lean  CollatzProofAttemptV211.lean  CollatzProofAttemptV212.lean  CollatzProofAttemptV213.lean  CollatzProofAttemptV215.lean  CollatzProofAttemptV216.lean  CollatzProofAttemptV217.lean  CollatzProofAttemptV22.lean  CollatzProofAttemptV23.lean  CollatzProofAttemptV24.lean  CollatzProofAttemptV25.lean  CollatzProofAttemptV26.lean  CollatzProofAttemptV27.lean  CollatzProofAttemptV28.lean  CollatzProofAttemptV29.lean  Core.lean  CyclicWordOrbit.lean  DHQPID.lean  DedekindHasseDumasInterface.lean  DedekindHasseProofAttempt.lean  DedekindIdealLayer.lean  DistilledParameters.lean  DumasIntertwiningBridge.lean  E3Decomposition.lean  EABCChannelPartition.lean  EABCLayer.lean  EabcSixStateMod6.lean  (+27 more)
docs/: arbeitsprogramm.md  atome_hypothese.md  black_hole_hypothese.md  bockstein_braiding_layer.md  chebyshev_bias_interface.md  collatz_analytical_perspectives.md  dumas_lemma.md  (+51 more)
(+535 files in other folders)
