[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kepler-hurrwitz"
version = "0.1.0"
description = "Minimaler Kern fuer Kepler-Hurwitz Signaturen und Invarianten."
requires-python = ">=3.10"

[project.optional-dependencies]
numpy = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exhaustive lattice sieve (may take tens of seconds)",
]
